// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures scan: classes 1`] = `
Set {
  "p-2",
  "p-1",
  "p-5",
  "p-3",
}
`;

exports[`fixtures scan: exclude 1`] = `
Array [
  "node_modules",
  ".git",
]
`;

exports[`fixtures scan: files 1`] = `
Array [
  "a.js",
  "a.ts",
  "b.js",
  "nested/b.js",
]
`;

exports[`fixtures scan: include 1`] = `
Array [
  "**/*.js",
  "a.ts",
]
`;
